--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
 </head>
 <body>
   <div class="old">
-    <img src="./assets/images/illustration-sign-up-mobile.svg" alt="">
+    <div>
+    <img class="desktop" src="./assets/images/illustration-sign-up-desktop.svg" alt="illustration">
+    <img class="mobile-img" src="./assets/images/illustration-sign-up-mobile.svg" alt="illustration">
+    </div>
+
+      <div>
+
     <p class="update">
       Stay updated!
     </p>
@@ -53,5 +59,7 @@
       </button>
     </div>
   </div>
+
+</div>
 </body>
 </html>
